add fontWeight-bold and work for section header

--- a/index.html
+++ b/index.html
@@ -9,21 +9,32 @@
 <body>
     <div class="wrapper">
       <header class="header">
-
+        <h1 class="header__title">Ты готов стать профессионалом?</h1>
+        <p class="header__text">Мы ищем 
+            <span>талантов</span> и 
+            <span>саппортов</span> в команду. Решите на какую категорию вы претендуете.</p>
+        <a href="#" class="header__button"><p>Заполнить анкету</p></a>
       </header>
+      <!--/header class="header"-->
       <main>
           <section class="img">
 
           </section>
+          <!--/section class="img"-->
           <section class="scope">
 
           </section>
-          <section></section>
+          <!--/section class="scope"-->
+          <section>
+
+          </section>
+          <!---->
           <section class="advantage">
 
           </section>
+          <!--/section class="advantage"-->
       </main>
-      <footer>
+      <footer class="footer">
 
       </footer>
     </div>
