--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <p class="header__text">Мы ищем 
             <span>талантов</span> и 
             <span>саппортов</span> в команду. Решите на какую категорию вы претендуете.</p>
-        <a href="#" class="header__button"><p>Заполнить анкету</p></a>
+        <div class="header__button"><div class="before">+</div> <div class="header__button--content">Заполнить анкету</div>
       </header>
       <!--/header class="header"-->
       <main>
-          <section class="img">
-
-          </section>
+          <section class="img"></section>
           <!--/section class="img"-->
           <section class="scope">
+          <div class="scope__block">
 
+          </div>
           </section>
           <!--/section class="scope"-->
           <section>
