--- a/index.html
+++ b/index.html
@@ -17,11 +17,24 @@
       </header>
       <!--/header class="header"-->
       <main>
-          <section class="img"></section>
-          <!--/section class="img"-->
           <section class="scope">
           <div class="scope__block">
-
+            <div class="scope__block--content">
+              <h3>Прокачиваем мир</h3>
+              <p>Вы хотите сделать мир лучше и не готовы ждать всю жизнь, чтобы начать это делать? </p>
+            </div>
+            <div class="scope__block--content">
+              <h3>Мотивируем себя</h3>
+              <p>У вас есть собственная цель и вы не боитесь много работать, чтобы её достичь?</p>
+            </div>
+            <div class="scope__block--content">
+              <h3>Используем лучшее</h3>
+              <p>Вы способны применять разные подходы для достижения своих целей?</p>
+            </div>
+            <div class="scope__block--content">
+              <h3>Относимся с пониманием</h3>
+              <p>Вы не обвиняете других в свои неудачах и способны воспринимать критику?</p>
+            </div>
           </div>
           </section>
           <!--/section class="scope"-->
