advantage section conplite

--- a/index.html
+++ b/index.html
@@ -45,7 +45,28 @@
           </section>
           <!--/section class="main-text-->
           <section class="advantage">
-
+              <h2 class="advantage__title">Приемущества работы с нами </h2>
+              <div class="advantage__container">
+                <div class="advantage__card">
+                  <img src="./production/img/Vallet.svg" alt="Vallet">
+                  <h3>Делимся оптом и навыками</h3>
+                  <div class="advantage__card--line"></div>
+                  <p>Мы обучаем коллег всему, что знаем сами. Наш опыт уникален и проверен временем, а команда постоянно совершенствует свои знания и навыки.</p>
+                </div>
+                <div class="advantage__card">
+                  <img src="./production/img/Vallet.svg" alt="Vallet">
+                  <h3>Стабильная зарплата</h3>
+                  <div class="advantage__card--line"></div>
+                  <p>Вы без задержек получаете официальную зарплату. Также мы оплачиваем больничные и даем возможность брать оплачиваемый отпуск до 4 недель в год.</p>
+                </div>
+                <div class="advantage__card">
+                  <img src="./production/img/Vallet.svg" alt="Vallet">
+                  <h3>Гибкий график</h3>
+                  <div class="advantage__card--line"></div>
+                  <p>Мы умеем работать с теми, кто еще не закончил получать образование. Вы можете работать неполный рабочий день, брать отгулы на время сессии и диплома.</p>
+                </div>
+              <!-- /.advantage__container -->
+            </div>
           </section>
           <!--/section class="advantage"-->
       </main>
