--- a/index.html
+++ b/index.html
@@ -71,8 +71,21 @@
           <!--/section class="advantage"-->
       </main>
       <footer class="footer">
-
+        <form action="#" class="footer-form">
+          <p class="footer-form__title">Теперь расскажите о себе</p>
+          <ol>
+            <li class="footer-form__input-title">Фамилия и имя</li>
+              <input class="footer-form__input" placeholder="Сидоров Александр" type="text">
+            <li class="footer-form__input-title">Электронная почта</li>
+              <input class="footer-form__input" placeholder="Sidorov@yandex.ru" type="text"> 
+            <li class="footer-form__input-title">Телефон </li>
+              <input class="footer-form__input"  placeholder="+7 (999)-328-14-20"   type="text"> 
+            <li class="footer-form__input-title"><span> Какой деятельностью, не связанной с текущими проектами, вы бы хотели заниматься в рабочее время?</span></li>
+              <textarea class="footer-form__input" placeholder="Свой проект по созданию универсальной инфраструктуры строительства" type="tex"></textarea>  
+          </ol>
+          <button>Отправить</button>
+        </form>
       </footer>
     </div>
 </body>
-</html>
+<
