media quires complitttt

--- a/index.html
+++ b/index.html
@@ -86,6 +86,6 @@
           <button>Отправить</button>
         </form>
       </footer>
-    </div>
+    </div><!--div class="wrapper"-->
 </body>
 <
