--- a/test-work/index.html
+++ b/test-work/index.html
@@ -17,6 +17,7 @@
         <div class="header__button">
           <div class="before">+</div> 
           <div class="header__button--content">Заполнить анкету</div>
+        </div>
       </header>
       <!--/header class="header"-->
       <main>
